update api client to work with boxine apis
